--- a/views/ingrediente/listagemIngrediente.ejs
+++ b/views/ingrediente/listagemIngrediente.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs')  %>
 
-    <title>LISTAGEM DE INGREDIENTES - LIBRI</title>
+    <title>LISTAGEM DE INGREDIENTES </title>
 
 </head>
 
