--- a/views/ingrediente/index.ejs
+++ b/views/ingrediente/index.ejs
@@ -15,14 +15,14 @@
         </div>
 
         <div class="card-body">
-            <form action="http://localhost:3000/inserirIngrediente" method="post">
+            <form action="http://localhost:3001/cadastroIngrediente" method="post">
                 
                 <label for="">INGREDIENTE</label>
                 <input type="text" class="form-control" 
                         name="nome_ingrediente" id="nome_ingrediente"
                         placeholder="DIGITE UM INGREDIENTE">
                 
-                <button class="btn btn-success mt-2">INGREDIENTES</button>
+                <button class="btn btn-success mt-2">CADASTRAR</button>
             </form>
         </div>
     </div>
